# Typeless

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
include/: typeless.h
sample/: CMakeLists.txt  sample.cpp
test/: CMakeLists.txt  array_test.h  object_test.h  test.cpp
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googletest/: CMakeLists.txt
test/internal/: CMakeLists.txt  internal_test.cpp
